# django-custom-admin

./: .dockerignore  .env-example  .gitignore  Dockerfile  INSTALL_GUIDE.md  Makefile  ROLES_GUIDE.md  Readme.md  US_NUMBER_FORMAT_CHANGES.md  compile_messages.py  compile_simple.py  deploy.ps1  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  install_capital_inversiones.ps1  nginx.conf  pyproject.toml  reporte_gastos.xlsx  requirements.txt  runserver.bat  setup.ps1  setup_translations.ps1  tailwind.config.js  test_parse.html  view.sql
Docs/: AI_INVOICE_MODULE.md  BACKEND_MIGRATION_SUMMARY.md  BACKEND_SERVICES_ARCHITECTURE.md  BACKEND_VISUAL_COMPARISON.md  BALANCES_MIGRATION_SUMMARY.md  CALCULO_AUTOMATICO_COMPRAS.md  CAPITAL_INVERSIONES_ARCHITECTURE_DECISION.md  CAPITAL_INVERSIONES_MODULE.md  CAPITAL_INVERSIONES_SUMMARY.md  DATATABLES_MIGRATION.md  DEPLOYMENT_GUIDE.md  IMPORTACION_EXCEL_FIX.md  SISTEMA_CATEGORIAS_IA.md  TRANSLATIONS_GUIDE.md
app/: .env_example  admin.py  admin_site.py  admin_widgets.py  custom_filters.py  forms.py  middleware.py  models.py  permissions.py  settings.py  urls.py  views.py  widgets.py
auditoria/: admin.py  admin_middleware.py  apps.py  middleware.py  models.py  services.py
capital_inversiones/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
catalogo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/: env.toml
gastos/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
mcp_server/: requirements.txt  setup.py
static/: styles.css
templates/: _base.html  balance.html  balances.html  catalogo.html  compras.html  compras_productores.html  crear_anticipo.html  data.html  detalle_productor_compras.html  index.html  lista_anticipos.html  reportes.html  user_manual.html
ventas/: admin.py  forms.py  models.py  urls.py  views.py
(+150 files in other folders)
