[tool.poetry]
name = "django-system"
version = "0.1.0"
description = ""
authors = ["bitboy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.5"
django-jazzmin = "^3.0.1"
django-import-export = "^4.2.0"
django-compressor = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true